fix jetbrains plugin